bug: header font stil  overlap with contect section between tablet and desktop size

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ main {
   font-size: 0.85rem;
   font-weight: 400;
   color: #030526;
+  line-height: 1;
 }
 
 .mobile-header__tagline {
@@ -300,8 +301,8 @@ body::after {
     width: 100vw;
     height: 70px;
     padding-left: 40px;
-    z-index: 200;
-    background-color: transparent;
+    z-index: -200;
+    background-color: #fbfaf4;
   }
 
   .desktop-header__name {
